--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-spring.application.name=course
-spring.datasource.url=jdbc:mysql://localhost:3306/aulajpa
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.profiles.active=test
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=true
